build(deps): bump guice-assistedinject from 4.2.3 to 5.0.1
Bumps guice-assistedinject from 4.2.3 to 5.0.1.

Signed-off-by: dependabot[bot] <support@github.com>